--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@eo-locale/react": "1.4.14",
     "@types/node": "14.14.39",
     "@types/react": "17.0.3",
     "@types/react-dom": "17.0.3",
